--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /* Homepage */
 body {
     font-family: 'Jost', sans-serif;
-    background-color: #000;
+    background-color: #111;
     margin: 0;
     padding: 0;
-    color: FFFFF;
+    color: #white;
 }
 
 header {
-    background-color: #000; 
+    background-color: #111111; 
     text-align: center;
     padding: 40px 0;
 }
@@ -17,10 +17,12 @@ header img {
     width: 300px;
     height: auto;
     margin-bottom: 20px;
+	background-color: #111111;
+	
 }
 
 nav {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: #111111;
     padding: 15px 0;
     text-align: center;
 }
@@ -28,7 +30,7 @@ nav {
 nav a {
     font-size: 18px;
     font-weight: 600;
-    color: white;
+    color: #white;
     text-decoration: none;
     padding: 10px 20px;
     margin: 0 15px;
@@ -57,7 +59,7 @@ main p {
 }
 
 footer {
-    background-color: #000;
+    background-color: #111111;
     text-align: center;
     padding: 20px 0;
     position: relative;
